--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://nix.dtutimes.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DTU Times</title>
+    <meta name="description" content="Streamline your editorial workflow with DTU Times Team - the central hub for coordinating tasks, managing content, and driving collaboration among DTU Times members. Efficiently publish and oversee your stories with ease!">
+    <title>DTU Times Team</title>
   </head>
   <body>
     <div id="root"></div>
