--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://nix.dtutimes.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="W2F0HL3PrDMFWXRVUB9wK8YlW_cmyNcUFX1CLOA9Ryc" />
     <meta name="description" content="Streamline your editorial workflow with DTU Times Team - the central hub for coordinating tasks, managing content, and driving collaboration among DTU Times members. Efficiently publish and oversee your stories with ease!">
     <title>DTU Times Team</title>
   </head>
