--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://nix.dtutimes.com/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="https://dtutimes.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Streamline your editorial workflow with DTU Times Team - the central hub for coordinating tasks, managing content, and driving collaboration among DTU Times members. Efficiently publish and oversee your stories with ease!">
     <title>DTU Times Team</title>
